[gd_scene load_steps=4 format=3 uid="uid://cya508uj8ajgm"]

[ext_resource type="Script" path="res://scripts/interactable_object.gd" id="1_r8tak"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xep0e"]
size = Vector2(56, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mturt"]
size = Vector2(47, 65)

[node name="InteractableObject" type="Node2D"]
script = ExtResource("1_r8tak")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xep0e")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_mturt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
